--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="world">
-        <h1>Hello World from Rana</h1>
+        <h1>Hello World from Rana M</h1>
         <img src= "images/world.jpg" alt="spinning world">
     </div>
 </body>
